# cpp-log-analyzer

./: .gitignore  CMakeLists.txt  README.md  overview.txt
.github/workflows/: ci.yml
include/: analyzer.hpp  cli.hpp  exporter.hpp  log_entry.hpp  parser.hpp  parser_fatal_exception.hpp
sample/: filtered_error_output.txt  summary.csv
src/: analyzer.cpp  cli.cpp  exporter.cpp  main.cpp  parser.cpp
tests/: manual_test_notes.txt  test_analyzer.cpp  test_exporter.cpp  test_parser.cpp
